<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timetable</string>
    <string name="action_settings">Settings</string>
    <string name="test_moduleCode">COMP3033J</string>
    <string name="test_choice">Lecture</string>
    <string name="test_dayOfWeek">Monday</string>
    <string name="test_startTime">24:59</string>
    <string name="test_location">Room 418</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="add">Add Module</string>
    <string name="dialog_moduleCode">Module Code:</string>
    <string name="dialog_moduleName">Module Name:</string>
    <string name="dialog_choice">Lecture/Practical</string>
    <string name="dialog_startTime">Start Time</string>
    <string name="dialog_endTime">End Time</string>
    <string name="dialog_location">Which Classroom?</string>
    <string name="dialog_info">Other Info:</string>
    <string name="lecture">Lectrue</string>
    <string name="practical">Practical</string>
    <string name="dialog_dayOfWeek">Day Of Week:</string>
    <string name="ok">OK</string>
    <string name="test_moduleName">Web Application Development Lab</string>
    <string name="module_startTime">Start Time:</string>
    <string name="module_endTime">End Time:</string>
    <string name="module_location">Location:</string>
    <string name="module_info">Additional Information</string>
    <string name="test_info">dsfdsvdxbdb\nasfgdgasfdgdss\nasfsgdgdsg\nassafdhfsvfdsvfdsvdsgssdssfdssjhfgghgds\ndvshfvjhfvhdsvfj\nsjkafasjsa</string>
    <string name="back">Back</string>
    <string name="L">L</string>
    <string name="Mo">Mo</string>
    <string name="tv_fontChoice">Chooce Your Font</string>
    <string name="setTime">Notification Time</string>
    <string name="tv_bgcolorChoice">Choose Your Background Color</string>
    <string name="tv_fontcolorChoice">Choose Your Font Color</string>
    <string name="bt_switch">Set Notification</string>
    <string name="tv_widget_hint">Upcoming Courses:</string>

</resources>
