<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants" >

    <TextView
        android:id="@+id/tv_lst_moduleCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/test_moduleCode"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/tv_lst_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_lst_moduleCode"
        android:layout_alignBottom="@+id/tv_lst_moduleCode"
        android:layout_marginStart="20dp"
        android:text="@string/L"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_lst_dayOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tv_lst_choice"
        android:layout_alignBottom="@+id/tv_lst_choice"
        android:layout_marginStart="10dp"
        android:text="@string/Mo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_lst_startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_lst_moduleCode"
        android:layout_below="@+id/tv_lst_moduleCode"
        android:text="@string/test_startTime"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_lst_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_lst_startTime"
        android:layout_below="@+id/tv_lst_startTime"
        android:layout_marginBottom="20dp"
        android:text="@string/test_location"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/tv_lst_dayOfWeek"
        android:src="@drawable/delete"
        android:contentDescription="@string/app_name"
        android:focusable="false" />

</RelativeLayout>
