<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name" />
    
    <TextView
        android:id="@+id/tv_widget_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tv_widget_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_widget_moduleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_widget_hint"
        android:layout_toEndOf="@+id/logo"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/test_moduleName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
